--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^3.4.1",
+    "ember-radio-button": "^1.2.4",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.5.0",
     "ember-table": "^2.0.0-beta.4",
